--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,6 +10,7 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
 
+    # Credenciales AWS disponibles para TODOS los steps
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -36,6 +37,7 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
+      # APPLY solo ocurre en master
       - name: Terraform Apply
         if: github.ref == 'refs/heads/master'
         run: terraform apply -auto-approve tfplan
